--- a/create-token/static/views/customizedToken.html
+++ b/create-token/static/views/customizedToken.html
@@ -15,7 +15,7 @@
         <a href="https://forms.gle/z9KsTohsfymsjmcL7">Submit request.</a>
 
     </p>
-    <a href="https://t.me/MoonDeploy" class="btn btn-primary my-3" role="button" target="_blank"
+    <a href="https://t.me/erc20bep20" class="btn btn-primary my-3" role="button" target="_blank"
         onclick="gtag('event','contact_us')">Contact us</a>
 </div>
 </div>
